fix: workaround for cypress workflow issue

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,11 @@ jobs:
       - name: 🛫 Checkout
         uses: actions/checkout@v4
 
+        ## Workaround https://github.com/cypress-io/cypress/issues/19981
+        ## workaround name with an emoji
+      - name: 🗿 Work around
+        run: chown -R 1001:1001 /github/home/.cache && echo "pwn dat cache"
+
       - name: 🌲 Cypress install
         uses: cypress-io/github-action@v6
         with:
