--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,10 @@
   "short_name": "Nuzlocke Tracker",
   "name": "Nuzlocke Tracker",
   "description": "Record and track nuzlocke progress",
+  "id": "com.nuzlocke.tracker",
+  "scope": "https://nuzlocke.netlify.app",
+  "scope_extensions": [],
+  "related_applications": [],
   "icons": [
     {
       "src": "favicon.ico",
@@ -11,7 +15,8 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any"
     },
     {
       "src": "logo512.png",
@@ -26,12 +31,31 @@
     }
   ],
   "start_url": ".",
+  "display_override": ["standalone"],
   "display": "standalone",
+  "edge_side_panel": {},
+  "share_target": {
+    "action": "/share-action/",
+    "method": "GET",
+    "enctype": "application/x-www-form-urlencoded",
+    "params": {
+      "title": "title",
+      "text": "text"
+    }
+  },
+  "dir": "ltr",
+  "protocol_handlers": [],
+  "launch_handler": {
+    "client_mode": "auto"
+  },
+  "lang": "en",
+  "handle_links": "auto",
   "theme_color": "#000000",
   "background_color": "#AE2A2F",
   "orientation": "portrait-primary",
   "categories": ["entertainment", "productivity"],
   "iarc_rating_id": "0e709b1e-f322-4f7e-974d-0c965ce09b7b",
+  "prefer_related_applications": "false",
   "shortcuts": [
     {
       "name": "Start tracking",
