--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,13 +20,7 @@
     "baseUrl": "./src",
     "types": ["cypress", "cypress-file-upload", "node", "cypress-localstorage-commands"]
   },
-  "include": [
-    "src",
-    "supabase.client.ts",
-    "cypress.config.ts",
-    "cypress/e2e/**/*.ts",
-    "supabase/functions/**/*.ts"
-  ],
+  "include": ["src", "supabase.client.ts", "cypress.config.ts", "cypress/e2e/**/*.ts"],
   "exclude": [
     "node_modules",
     "cypress",
@@ -40,6 +34,7 @@
     "src/constants/moves.ts",
     "src/constants/pokemon.ts",
     "src/constants/nickname.ts",
-    "src/constants/details.ts"
+    "src/constants/details.ts",
+    "supabase/functions/**/*.ts"
   ]
 }
